--- a/Profil.html
+++ b/Profil.html
@@ -68,8 +68,8 @@
 <div class="container">
     <div class="profile-header">
         <img src="https://img.freepik.com/vektor-gratis/ilustrasi-pria-muda-tersenyum_1308-174669.jpg?semt=ais_hybrid&w=740&q=80" alt="Foto Profil Anda">
-        <h1>Nama Lengkap Anda</h1>
-        <p>Gelar / Profesi Anda</p>
+        <h1>M.Fadli</h1>
+        <p>S2 INFORMATIKA</p>
     </div>
     
     <div class="section">
@@ -78,11 +78,11 @@
     </div>
 
     <div class="section">
-        <h2>Pendidikan</h2>
+        <h2>SMA</h2>
         <ul>
             <li>
-                <strong>Nama Universitas/Sekolah</strong> (Tahun Lulus)
-                <br>Jurusan Anda
+                <strong>SMAN 1 SUKABUMI</strong> (Tahun Lulus)
+                <br>INFORMATIKA
             </li>
             <li>
                 <strong>Nama Universitas/Sekolah</strong> (Tahun Lulus)
