--- a/Profil.html
+++ b/Profil.html
@@ -85,8 +85,8 @@
                 <br>INFORMATIKA
             </li>
             <li>
-                <strong>Nama Universitas/Sekolah</strong> (Tahun Lulus)
-                <br>Jurusan Anda
+                <strong>SMAN 1 SUKABUMI</strong> (Tahun Lulus)
+                <br>INFORMATIKA
             </li>
         </ul>
     </div>
