--- a/Profil.html
+++ b/Profil.html
@@ -95,14 +95,14 @@
         <h2>Pengalaman Kerja</h2>
         <ul>
             <li>
-                <strong>Posisi Anda</strong> (Tahun Mulai - Tahun Selesai)
-                <br>Nama Perusahaan
-                <br>Deskripsi singkat tentang tanggung jawab dan pencapaian Anda di sini.
+                <strong>Posisi Anda</strong> (2023 - 2026)
+                <br>SMAN 1 SUKABUMI
+                <br>ingin jadi lebih rajin
             </li>
             <li>
-                <strong>Posisi Anda</strong> (Tahun Mulai - Tahun Selesai)
-                <br>Nama Perusahaan
-                <br>Deskripsi singkat tentang tanggung jawab dan pencapaian Anda di sini.
+                <strong>SISWA</strong> (2023 - 2026)
+                <br>SMAN 1 SUKABUMI
+                <br>Menjadi disiplin
             </li>
         </ul>
     </div>
@@ -110,9 +110,9 @@
     <div class="section">
         <h2>Keahlian</h2>
         <ul>
-            <li>Keahlian 1</li>
-            <li>Keahlian 2</li>
-            <li>Keahlian 3</li>
+            <li>CODING 1</li>
+            <li>MEKANIK 2</li>
+            <li>PEMAAF 3</li>
         </ul>
     </div>
 </div>
